@@ -44,7 +44,7 @@ DBuff is a Dota 2 match analytics backend built with Spring Boot 3.5, Java 21, a
 - `service/` — Business logic:
   - `ai/` — OpenAI-powered match analysis and summarization
   - `constant/` — Hero/item/ability constants (cached from OpenDota)
-  - `discord/` — Discord bot listeners (JDA)
+  - `discord/` — Discord bot (JDA). `discord/command/` holds the command layer; see below.
   - `list/` — Match history scraping (Playwright + JSoup) and parsing
   - `match/` — Match processing, analysis, and detail mapping
   - `ranking/` — Item/ability ranking calculations
@@ -56,7 +56,18 @@ DBuff is a Dota 2 match analytics backend built with Spring Boot 3.5, Java 21, a
 - **Semaphore-based concurrency control**: `ConcurrencyConfig` limits parallel match fetches (20) and page scrapes (5) to prevent resource exhaustion.
 - **Rate limiting**: Guava `RateLimiter` on OpenDota API (60 req/min) and ScraperAPI calls.
 - **Caching**: Caffeine + Spring Cache for hero/item/ability constants.
-- **Schema management**: Hibernate `ddl-auto=update` owns the schema. There are SQL scripts in `server/src/main/resources/db/migration/`, but **Flyway is not on the classpath** — it was never added as a dependency, so those scripts have never run and the indexes they define (e.g. `V2__item_ranking_indexes.sql`) do not exist in any deployed database. Treat a `pg_dump` as the only authoritative schema, and do not assume a migration has been applied because a file exists.
+- **Schema management**: Hibernate `ddl-auto=update` owns the schema. There are SQL scripts in `server/src/main/resources/db/migration/`, but **Flyway is not on the classpath** — it was never added as a dependency, so those scripts have never run. Treat a `pg_dump` as the only authoritative schema, and do not assume a migration has been applied because a file exists. Indexes are declared with `@Index` on the entities so Hibernate owns them too; `V2__item_ranking_indexes.sql` is retained only as documentation of the `INCLUDE`/partial variants JPA cannot express.
+- **Preview features are enabled**: `--enable-preview` is passed at compile time, to the test JVM, and in production (`template.yaml`). All three must agree — a class that actually uses a preview feature is marked in its class file and will not load on a JVM without the flag.
+
+### Discord Command Layer
+
+Commands do not touch JDA. Each implements `DbuffCommand` (name, JDA definition, `execute`) and talks to Discord only through `CommandContext`, which is why they are all testable against `FakeCommandContext` with no Discord connection.
+
+- **`CommandRegistry`** is the single source of truth: both adapters dispatch through it, guild registration reads its definitions, and `/dbuff help` is generated from it, so help cannot drift from the implemented command set.
+- **Two adapters, one handler per command.** `SlashCommandAdapter` serves `/` commands and autocomplete; `TextCommandAdapter` keeps the legacy `!` aliases (`!dbuf`, `!vs`, `!rerun`, `!retry`) working by mapping them onto the same option names. Never register a second listener for an input an adapter already handles — both surfaces see `!` messages and the command would be answered twice.
+- **Validate, then acknowledge, then work.** Discord discards an interaction not acknowledged within 3 s, and an ephemeral message cannot carry a thread. So every handler does its cheap validation first with `replyEphemeral`, calls `acknowledge` second (which creates the thread), and does the slow work third, writing into the returned `AsyncReply`. Getting this order wrong means a typo produces a thread full of an error instead of a private correction.
+- **Autocomplete providers** are keyed `command:subcommand:option`, most-specific-first — needed because e.g. `/dbuff players add player:` searches all of OpenDota while `remove player:` must offer only tracked players. The OpenDota search provider has its **own** rate limiter and cache, deliberately separate from the 60 req/min match-fetch limiter, so typing in a picker cannot starve match ingestion.
+- **Unknown names are reported, never dropped.** `ConstantNameResolver` returns unresolved names and the services throw `UnknownConstantNameException`; silently discarding one turns a filtered query into an unfiltered top-N and answers a different question than the one asked.
 
 ### Environment Variables
 
